hphp/test/zend/good/tests-lang/042.php.exp
foo
HipHop Fatal error: Class undefined: B in hphp/test/zend/good/tests-lang/042.php on line 10
